# traact_spatial

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: ci_workflow.yml
include/traact/: spatial.h  spatialBody.h  spatial_convert.h  traact_spatial_export.h
include/traact/component/spatial/util/: Pose6DTestSource.h
src/: SpatialPlugin.cpp  spatial.cpp  spatialBody.cpp
src/component/: MultiplicationComponent.cpp  MultiplicationComponent.h  Pose6DPrint.cpp  Pose6DPrint.h  Pose6DTestSource.cpp  PrintBodyList.h  StaticPose.cpp
src/component/facade/: SpatialApplicationComponent.cpp
src/traact/: spatial.cpp  spatial.h  spatialBody.cpp  spatialBody.h  spatial_convert.cpp  spatial_convert.h  traact_spatial_export.h
